
[tool.poetry]
name = "gridlib"
version = "0.5.0"
description = "Python package to perform Genuine Rate IDentification (GRID) analysis on fluorescence survival time distributions."
authors = ["Boyd Christiaan Peters <boyd.c.peters@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/boydcpeters/gridlib"
repository = "https://github.com/boydcpeters/gridlib"
documentation = "https://gridlib.readthedocs.io"
keywords = ["gridlib"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",

    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]

exclude = [
  { path = "examples", format = ["sdist", "wheel"] }
]


[tool.poetry.urls]
"Homepage" = "https://github.com/boydcpeters/gridlib"
"Bug Tracker" = "https://github.com/boydcpeters/gridlib/issues"
"Documentation" = "https://gridlib.readthedocs.io/en/latest/"



[tool.poetry.dependencies]
python = "<3.11,>=3.7"
scipy = "^1.6.0"
matplotlib = "^3.4.0"
psutil = "^5.9.0"
tqdm = "^4.63.0"
# numpy will also be installed since it is a dependency of scipy and matplotlib

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
invoke = "^1.6.0"
flake8 = "^4.0.1"
flakeheaven = "^3.0.0"
flake8-builtins = "^1.5.3"
flake8-blind-except = "^0.2.0"
flake8-logging-format = "^0.7.4"
flake8-bugbear = ">=22.7.1,<24.0.0"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^3.0.0"
isort = "^5.9.3"
black = "^22.3.0"
safety = "^2.1.1"
mypy = "^0.971"
sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
bump2version = "^1.0.1"
pytest = "^7.1.2"
xdoctest = "^1.0.1"
coverage = {version = "^6.0.1", extras = ["toml"]}
pytest-cov = "^3.0.0"
watchdog = {version = "^2.1.6", extras = ["watchmedo"]}
numpydoc = "^1.4.0"
myst-parser = "^0.18.1"
darglint = "^1.8.1"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.coverage.paths]
source = ["gridlib", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["gridlib"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakeheaven]
format = "grouped"
max_line_length = 88
show_source = true
docstring-convention = "numpy"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39","py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
